--- a/index.html
+++ b/index.html
@@ -3,269 +3,136 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic-Tac-Toe Game</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <meta name="admob_app_id" content="ca-app-pub-9165712611968666~8110473668">
+    <title>Calculator with Ads</title>
     <style>
+        /* Include CSS */
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom right, #4CAF50, #81C784);
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #00c6ff, #0072ff);
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            overflow: hidden;
-            flex-direction: column;
         }
-
-        .game-container {
-            text-align: center;
+        .calculator {
             background: #fff;
-            padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-            margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            width: 300px;
+            padding: 20px;
         }
-
-        h1 {
-            color: #333;
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        .mode-toggle {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 15px;
-        }
-
-        .mode-toggle button {
-            background: #0072ff;
-            color: #fff;
-            border: none;
-            padding: 10px 15px;
-            margin: 0 5px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: 600;
-            transition: 0.3s;
-        }
-
-        .mode-toggle button.active {
-            background: #00c6ff;
-        }
-
-        .board {
-            display: grid;
-            grid-template-columns: repeat(3, 100px);
-            gap: 5px;
-            justify-content: center;
-        }
-
-        .cell {
-            width: 100px;
-            height: 100px;
-            background: #f0f0f0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 36px;
-            font-weight: bold;
-            color: #333;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: transform 0.2s;
-        }
-
-        .cell:hover {
-            transform: scale(1.1);
-        }
-
-        .cell.taken {
-            pointer-events: none;
-        }
-
-        .status {
-            margin-top: 15px;
-            font-size: 18px;
-            color: #333;
-            font-weight: 600;
-        }
-
-        .restart {
-            margin-top: 10px;
-            background: #0072ff;
-            color: #fff;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: 600;
-            transition: 0.3s;
-        }
-
-        .restart:hover {
-            background: #00c6ff;
-        }
-
-        /* Ad section */
-        .ad-container {
+        .display {
             width: 100%;
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
+            height: 50px;
+            background: #f5f5f5;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            text-align: right;
+            font-size: 20px;
+            padding: 10px;
+            box-sizing: border-box;
         }
-
-        .ad-container .adsbygoogle {
-            display: block;
+        .buttons {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 10px;
+            margin-top: 15px;
+        }
+        .button {
+            background: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 15px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+        .button:hover {
+            background: #45a049;
+        }
+        .ad-container {
+            margin: 20px 0;
+            text-align: center;
         }
     </style>
-    
-    <!-- Google Adsense Script -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
-    <div class="game-container">
-        <h1>Tic-Tac-Toe Game</h1>
-        <div class="mode-toggle">
-            <button class="active" id="singlePlayerBtn">Single Player</button>
-            <button id="multiPlayerBtn">Multiplayer</button>
+    <div class="calculator">
+        <input type="text" id="display" class="display" readonly>
+        <div class="buttons">
+            <button class="button" onclick="inputNumber(7)">7</button>
+            <button class="button" onclick="inputNumber(8)">8</button>
+            <button class="button" onclick="inputNumber(9)">9</button>
+            <button class="button" onclick="inputOperation('/')">/</button>
+            <button class="button" onclick="inputNumber(4)">4</button>
+            <button class="button" onclick="inputNumber(5)">5</button>
+            <button class="button" onclick="inputNumber(6)">6</button>
+            <button class="button" onclick="inputOperation('*')">*</button>
+            <button class="button" onclick="inputNumber(1)">1</button>
+            <button class="button" onclick="inputNumber(2)">2</button>
+            <button class="button" onclick="inputNumber(3)">3</button>
+            <button class="button" onclick="inputOperation('-')">-</button>
+            <button class="button" onclick="clearDisplay()">C</button>
+            <button class="button" onclick="inputNumber(0)">0</button>
+            <button class="button" onclick="calculate()">=</button>
+            <button class="button" onclick="inputOperation('+')">+</button>
         </div>
-        <div class="board" id="board"></div>
-        <div class="status" id="status"></div>
-        <button class="restart" id="restart">Restart Game</button>
+        <div class="ad-container">
+            <div id="ad-banner"></div>
+            <button onclick="showRewardedAd()">Show Rewarded Ad</button>
+        </div>
     </div>
 
-    <!-- Google AdSense Ad Slot -->
-    <div class="ad-container">
-        <ins class="adsbygoogle"
-             style="display:block; width:100%; height:50px;"
-             data-ad-client="ca-pub-9165712611968666"
-             data-ad-slot="8814217685"></ins>
-    </div>
-
+    <!-- AdMob Script -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
-        const board = document.getElementById('board');
-        const statusDisplay = document.getElementById('status');
-        const restartBtn = document.getElementById('restart');
-        const singlePlayerBtn = document.getElementById('singlePlayerBtn');
-        const multiPlayerBtn = document.getElementById('multiPlayerBtn');
-
-        let gameMode = 'single'; // Default mode
-        let currentPlayer = 'X';
-        let gameActive = true;
-        let gameState = Array(9).fill(null);
-
-        const winningConditions = [
-            [0, 1, 2], [3, 4, 5], [6, 7, 8],
-            [0, 3, 6], [1, 4, 7], [2, 5, 8],
-            [0, 4, 8], [2, 4, 6]
-        ];
-
-        function createBoard() {
-            board.innerHTML = '';
-            gameState = Array(9).fill(null);
-            for (let i = 0; i < 9; i++) {
-                const cell = document.createElement('div');
-                cell.classList.add('cell');
-                cell.dataset.index = i;
-                board.appendChild(cell);
-            }
-        }
-
-        function handleCellClick(event) {
-            const cell = event.target;
-            const cellIndex = cell.dataset.index;
-
-            if (gameState[cellIndex] || !gameActive) return;
-
-            gameState[cellIndex] = currentPlayer;
-            cell.textContent = currentPlayer;
-            cell.classList.add('taken');
-
-            if (checkWinner()) {
-                statusDisplay.textContent = `${currentPlayer} wins!`;
-                gameActive = false;
-                return;
-            }
-
-            if (gameState.every(cell => cell)) {
-                statusDisplay.textContent = `It's a draw!`;
-                gameActive = false;
-                return;
-            }
-
-            currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
-            statusDisplay.textContent = `Player ${currentPlayer}'s turn`;
-
-            if (gameMode === 'single' && currentPlayer === 'O') {
-                setTimeout(aiMove, 500);
-            }
-        }
-
-        function aiMove() {
-            let emptyCells = gameState.map((val, index) => (val === null ? index : null)).filter(val => val !== null);
-            let randomIndex = emptyCells[Math.floor(Math.random() * emptyCells.length)];
-
-            gameState[randomIndex] = 'O';
-            const cell = board.children[randomIndex];
-            cell.textContent = 'O';
-            cell.classList.add('taken');
-
-            if (checkWinner()) {
-                statusDisplay.textContent = `O wins!`;
-                gameActive = false;
-                return;
-            }
-
-            if (gameState.every(cell => cell)) {
-                statusDisplay.textContent = `It's a draw!`;
-                gameActive = false;
-                return;
-            }
-
-            currentPlayer = 'X';
-            statusDisplay.textContent = `Player X's turn`;
-        }
-
-        function checkWinner() {
-            return winningConditions.some(condition => {
-                const [a, b, c] = condition;
-                return gameState[a] && gameState[a] === gameState[b] && gameState[a] === gameState[c];
-            });
-        }
-
-        function restartGame() {
-            gameActive = true;
-            currentPlayer = 'X';
-            statusDisplay.textContent = `Player X's turn`;
-            createBoard();
-        }
-
-        singlePlayerBtn.addEventListener('click', () => {
-            gameMode = 'single';
-            singlePlayerBtn.classList.add('active');
-            multiPlayerBtn.classList.remove('active');
-            restartGame();
+        // Initialize AdMob Banner Ad
+        const adBanner = document.getElementById('ad-banner');
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-app-pub-9165712611968666/2183956030",
+            enable_page_level_ads: true,
         });
 
-        multiPlayerBtn.addEventListener('click', () => {
-            gameMode = 'multi';
-            multiPlayerBtn.classList.add('active');
-            singlePlayerBtn.classList.remove('active');
-            restartGame();
-        });
+        // Function to show rewarded ads
+        function showRewardedAd() {
+            alert("Rewarded Ad Triggered (Replace with AdMob SDK integration).");
+            // AdMob SDK integration required for actual ad display
+        }
+    </script>
+    <script>
+        // Calculator Logic
+        let display = document.getElementById('display');
+        let currentInput = '';
 
-        board.addEventListener('click', handleCellClick);
-        restartBtn.addEventListener('click', restartGame);
+        function inputNumber(num) {
+            currentInput += num;
+            display.value = currentInput;
+        }
 
-        createBoard();
-        statusDisplay.textContent = `Player X's turn`;
+        function inputOperation(op) {
+            currentInput += ` ${op} `;
+            display.value = currentInput;
+        }
 
-        // Load Google Ads
-        (adsbygoogle = window.adsbygoogle || []).push({});
+        function calculate() {
+            try {
+                display.value = eval(currentInput);
+                currentInput = display.value;
+            } catch (error) {
+                display.value = 'Error';
+                currentInput = '';
+            }
+        }
+
+        function clearDisplay() {
+            currentInput = '';
+            display.value = '';
+        }
     </script>
 </body>
 </html>
+
